--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         </label>
                      </div>
                   </div>
-                  <button type="button"  class="btn btn-primary" id="loginBtn" style="width:100%" disabled onclick="handleLogin()">Sign In</button>
+                  <button type="button"  class="btn btn-primary" id="loginBtn" style="width:100%;display: flex;align-items: center;justify-content: center;" disabled onclick="handleLogin()">Sign In</button>
                </form>
                <div style="display:flex;justify-content:space-between">
                   <a href="https://bo.ftconline.in/WebClient/index.cfm" target="_blank">Change Password</a>
