--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                      <input type="text" class="form-control" id="username" placeholder="Client ID" />
                   </div>
                   <div class="form-group">
-                     <input type="password" class="form-control" id="password" placeholder="Password" onchange="handlePasswordChange(this)" onkeypress="this.onchange(this);" />
+                     <input type="password" class="form-control" id="password" placeholder="Password"  />
                   </div>
                   <div class="form-group">
                      <div class="checkbox">
@@ -31,7 +31,7 @@
                         </label>
                      </div>
                   </div>
-                  <button type="button"  class="btn btn-primary" id="loginBtn" style="width:100%;display: flex;align-items: center;justify-content: center;" disabled onclick="handleLogin()">Sign In</button>
+                  <button type="button"  class="btn btn-primary" id="loginBtn" style="width:100%;display: flex;align-items: center;justify-content: center;"  onclick="handleLogin()">Sign In</button>
                </form>
                <div style="display:flex;justify-content:space-between">
                   <a href="https://bo.ftconline.in/WebClient/index.cfm" target="_blank">Change Password</a>
