--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                            </div>
                            <div class="tbl-row" >
                               <b class="">Net : </b>
-                              <b>0.0 CR</b>
+                              <b>11098656.97 CR</b>
                            </div>
                            <div class="tbl-row" >
                               <b class="">UnConcile Credit : </b>
@@ -115,11 +115,11 @@
                            </div>
                            <div class="tbl-row" >
                               <b class="">Ledger : </b>
-                              <text>0.0 CR</text>
+                              <text>11098656.97 CR</text>
                            </div>
                            <div class="tbl-row" >
                               <b class="">Ledger+Mrg-Coll : </b>
-                              <text>0.0 CR</text>
+                              <text>11098656.97 CR</text>
                            </div>
                            <div class="tbl-row" >
                               <b class="">Pending Advance Brokrage : </b>
