--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                            </div>
                            <div class="tbl-row" >
                               <b class="">Net : </b>
-                              <b>1,10,98,656.97 CR</b>
+                              <b class="data">1,10,98,656.97 CR</b>
                            </div>
                            <div class="tbl-row" >
                               <b class="">UnConcile Credit : </b>
@@ -115,11 +115,11 @@
                            </div>
                            <div class="tbl-row" >
                               <b class="">Ledger : </b>
-                              <text>1,10,98,656.97 CR</text>
+                              <text class="data">1,10,98,656.97 CR</text>
                            </div>
                            <div class="tbl-row" >
                               <b class="">Ledger+Mrg-Coll : </b>
-                              <text>1,10,98,656.97 CR</text>
+                              <text class="data">1,10,98,656.97 CR</text>
                            </div>
                            <div class="tbl-row" >
                               <b class="">Pending Advance Brokrage : </b>
